<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- <string name="base_url">http://192.168.0.104:9000/</string> -->
    <!--<string name="base_url">http://192.168.2.168:9000/</string>-->
    <!--<string name="base_url">http://192.168.2.3:9000/</string>-->
    <!--<string name="base_url">http://droidcon-server.herokuapp.com/</string>-->
    <string name="title_activity_debug_enter_uuid">DebugEnterUuid</string>
    <string name="title_activity_debug_schedule_display">DebugScheduleDisplayActivity</string>
    <string name="google_error">Cannot login with Google. Please contact support.</string>
    <string name="network_error">Network problems...</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_unknown">Unknown error.  Sorry?</string>
    <string name="title_activity_find_user">FindUser</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>

    <!-- drawer copy-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="explore">Schedule</string>
    <string name="my_schedule">My agenda</string>
    <string name="chat_on_slack">Chat on Slack</string>

    <string name="map">Map</string>
    <string name="social">Social profiles</string>
    <string name="profile">Edit profile</string>
    <string name="sponsors">Sponsors</string>
    <string name="about">About</string>
    <string name="zendesk">Zendesk</string>
    <string name="vote">Vote</string>

    <!-- welcome copy-->
    <string name="welcome_0_title">Welcome to Droidcon NYC!</string>
    <string name="welcome_1_title">Plan ahead</string>
    <string name="welcome_2_title">Be yourself</string>
    <string name="welcome_3_title">Say hey to our sponsors ...</string>
    <string name="welcome_0_desc">This app will help you navigate the world\'s largest community-driven Android conference</string>
    <string name="welcome_1_desc">Quickly make and manage your schedule to stay on track</string>
    <string name="welcome_2_desc">Fill out your profile and connect with other #DCNYC16 attendees</string>
    <string name="welcome_3_desc">Sponsors are cool.</string>
    <string name="next">Next</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="select_an_account">Select an account</string>
    <string name="choose_account">Please choose an account to use:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Continue</string>

    <string name="vote_welcome_title">Voting is open!</string>
    <string name="vote_welcome_body">As a ticketholder for Droidcon SF 2015, you get to help decide which sessions make it into the lineup.\n\nTouch \"continue\" to see the list of submissions and start voting!</string>

    <!-- profile copy-->
    <string name="title_activity_edit_user_profile">Edit my profile</string>
    <string name="hint_name">Full name</string>
    <string name="hint_email">Email address</string>
    <string name="public_email">Hide my email address</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_company">Company</string>
    <string name="hint_website">http://yoursite.com</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter</string>
    <string name="hint_linkedIn">LinkedIn</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_bio">Bio</string>
    <string name="error_phone">Please enter a valid phone number.</string>
    <string name="error_email">Please enter a valid email address.</string>
    <string name="error_name">Don\'t forget your name!</string>
    <string name="contact">Contact Info</string>
    <string name="privacy">Privacy</string>
    
    <!-- Event Detail -->
    <string name="event_venue_time" >%1$s, %2$s - %3$s</string>
    <string name="event_speaker_name" >%1$s, %2$s</string>
    <string name="event_track" >on the %1$s track</string>
    <string name="event_now" >This session is happening now</string>
    <string name="event_past" >This session has already ended</string>
    <string name="event_conflict" >This session conflicts with another session in your schedule</string>

    <!-- tracks-->
    <string name="filter">Filter</string>
    <string name="tracks">Tracks</string>
    <string name="development">Development</string>
    <string name="design">Design</string>
    <string name="business">Business</string>

    <string name="action_filter">Filters</string>
    <string name="action_search">Find Attendees</string>

    <string name="about_app_header">About the app</string>
    <string name="about_app">
        The Droidcon app is coded in-house by the touchlab team.  Worked on by Liam, Izzy, Sam, Ramona and Kevin.\n\nIt’s a bit of an experiment, written largely in Kotlin, and including a new(ish) ORM framework. Fun stuff.\n\nThe code is open source, at:\nhttps://github.com/touchlab/DroidconApp
    </string>

    <string name="about_touch_header">About touchlab</string>
    <string name="about_touch">
        Touchlab is a developer founded and run
        development shop focused on building
        amazing Android experiences with great
        design as a foundational principle.\n\nWe’re a group of Android experts who believe
        that Android can and must be better.\n\nWe believe that what we built yesterday was
        great, but what we build with you tomorrow
        will be even better.\n\nAnd we’re currently hiring. Want to join a team
        where Android isn’t that other platform, where
        we care about pushing our favorite technology
        forward, and where you can get more involved
        with the community at large? Get in touch.\n\nhttp://touchlab.co\n\n
    </string>
    <string name="more">More</string>
    <string name="less">Less</string>

    <string name="photoChooser">Get new image from...</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="vote_prompt">Voting promt:</string>
    <string name="vote_with">with\ </string>
    <string name="vote_submit">SUBMIT</string>
    <string name="vote_pass">PASS</string>
    <string name="vote_voted">Toggle Voted</string>
    <string name="empty_open_vote">No new talk submissions available.\nCheck back later!</string>
    <string name="empty_close_vote">You haven\'t voted on talks yet.</string>
    <string name="get_ticket">Get ticket</string>
    <string name="share">Share</string>
    <string name="finding_ticket">Finding ticket information...</string>
    <string name="network_msg">There was a network error. Please check your connection.</string>
    <string name="no_ticket">We couldn’t find your ticket info. Touch below to get a ticket or send yourself a link.\n\nIf you purchased a ticket using a different email address, authorize with Eventbrite to get started!</string>
    <string name="eb_sign_in">Sign in to Eventbrite</string>
    <string name="retry">Retry</string>
    <string name="save_profile_toast">Photo updating. May take a bit…</string>
    <string name="sd_profile_toast">SD card not mounted</string>

    <string name="notif_card_title">Session notification</string>
    <string name="notif_card_body">Turn on notifications for sessions in your schedule?</string>
    <string name="notif_card_accept">sure</string>
    <string name="notif_card_decline">no thanks</string>
    <string name="notif_title">Session starting soon</string>
    <string name="notif_body">"The \"%s\" session is starting soon!"</string>
    <string name="content_toggle_alerts">Toggle Session Alerts</string>
    <string name="conflict">conflict</string>
    <string name="hint_gPlus">Profile</string>

    <string name="lorem_name">Lorem Ipsum</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="feedback">Feedback</string>
    <string name="live_stream">Stream archive</string>
    <string name="live_stream_now">Live now!</string>
    <string name="live_stream_loading">Live stream loading…</string>

    <!-- content descriptions-->
    <string name="cd_live_now">live now</string>
    <string name="cd_sponsor_logos">sponsor logos</string>
    <string name="cd_about_section">about section</string>
    <string name="cd_navigation_icon">navigation icon</string>
    <string name="cd_profile_cover_image">profile cover image</string>
    <string name="cd_close_user_detail">close user detail</string>
    <string name="cd_event_description">event description</string>
    <string name="cd_stream_icon">stream icon</string>

    <string name="add_contact">Add to contacts</string>
    <string name="title_activity_user_detail">Profile</string>
    <string name="title_activity_sponsors">OUR AWESOME SPONSORS</string>
    <string name="sponsor_image">Sponsor Image</string>

    <string name="sponsors_tab_general">GENERAL &#x1F60E;</string>
    <string name="sponsors_tab_streaming">STREAMING &#x1F4FA;</string>
    <string name="sponsors_tab_party">PARTY &#x1F389;</string>

    <string name="streaming_email">It looks like %1$s isn\'t associated with a streaming-enabled ticket.</string>

</resources>
