<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              tools:context="co.touchlab.droidconandroid.EditUserProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/edit_user_backdrop"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_alignBottom="@+id/toolbar"
                android:adjustViewBounds="true"
                android:paddingTop="@dimen/status_bar_height"
                android:scaleType="centerCrop"
                android:src="@drawable/superglyph_outline360x114dp"
                tools:ignore="ContentDescription"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ActionBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/status_bar_height">

                <co.touchlab.droidconandroid.ui.SabotaToolbarTitle
                    android:id="@+id/edit_profile_toolbar_title"
                    style="@style/sabota_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:text="@string/title_activity_edit_user_profile"
                    android:textColor="@color/white"/>

            </android.support.v7.widget.Toolbar>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/profile_right_padding"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/profile_right_padding"
            android:paddingStart="0dp"
            android:paddingTop="@dimen/padding_medium">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:src="@drawable/circle_profile_placeholder"/>

            <TextView
                android:id="@+id/placeholder_emoji"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignTop="@id/profile_image"
                android:layout_alignStart="@id/profile_image"
                android:layout_alignLeft="@id/profile_image"
                android:textSize="@dimen/text_xlarge"
                android:gravity="center"
                tools:text=":)"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@+id/profile_image"
                android:layout_toRightOf="@+id/profile_image"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:textColor="@color/primary_dark_50"
                android:textSize="@dimen/text_xxxlarge"/>

            <TextView
                android:id="@+id/contactInfo"
                android:layout_below="@id/name"
                android:text="@string/contact"
                style="@style/EditProfileHeader"/>

            <ImageView
                android:id="@+id/phone_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/contactInfo"
                android:tint="@color/primary_dark_50"
                app:srcCompat="@drawable/vic_phone_black_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/phone"
                style="@style/EditProfileField"
                android:layout_below="@id/contactInfo"
                android:hint="@string/hint_phone"
                android:layout_marginTop="0dp"
                android:inputType="phone" />

            <ImageView
                android:id="@+id/email_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/phone_icon"
                android:tint="@color/primary_dark_50"
                app:srcCompat="@drawable/vic_email_black_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/email"
                style="@style/EditProfileField"
                android:layout_below="@id/phone"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:enabled="false"
                android:focusable="false"/>

            <ImageView
                android:id="@+id/company_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/email_icon"
                android:tint="@color/primary_dark_50"
                app:srcCompat="@drawable/vic_company_black_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/company"
                style="@style/EditProfileField"
                android:layout_below="@id/email"
                android:hint="@string/hint_company"/>

            <ImageView
                android:id="@+id/website_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/company_icon"
                android:tint="@color/primary_dark_50"
                app:srcCompat="@drawable/vic_website_black_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/website"
                style="@style/EditProfileField"
                android:layout_below="@id/company"
                android:hint="@string/hint_website"/>

            <TextView
                android:id="@+id/social"
                style="@style/EditProfileHeader"
                android:layout_below="@id/website"
                android:text="@string/social"/>

            <ImageView
                android:id="@+id/facebook_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/social"
                app:srcCompat="@drawable/vic_facebook_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/facebook"
                style="@style/EditProfileField"
                android:layout_marginTop="0dp"
                android:layout_below="@id/social"
                android:hint="@string/hint_facebook"/>

            <ImageView
                android:id="@+id/twitter_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/facebook_icon"
                app:srcCompat="@drawable/vic_twitter_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/twitter"
                style="@style/EditProfileField"
                android:layout_below="@id/facebook"
                android:hint="@string/hint_twitter"/>

            <ImageView
                android:id="@+id/gPlus_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/twitter_icon"
                app:srcCompat="@drawable/vic_gplus_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/gPlus"
                style="@style/EditProfileField"
                android:layout_below="@id/twitter"
                android:hint="@string/hint_gPlus"/>

            <ImageView
                android:id="@+id/linkedIn_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/gPlus_icon"
                app:srcCompat="@drawable/vic_linkedin_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/linkedIn"
                style="@style/EditProfileField"
                android:layout_below="@id/gPlus"
                android:hint="@string/hint_linkedIn"/>

            <TextView
                android:id="@+id/privacy"
                style="@style/EditProfileHeader"
                android:layout_below="@id/linkedIn"
                android:text="@string/privacy"/>

            <CheckBox
                android:id="@+id/hide_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/name"
                android:layout_alignEnd="@+id/name"
                android:layout_below="@id/privacy"
                android:checked="true"/>

            <TextView
                android:id="@+id/public_email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/name"
                android:layout_alignStart="@id/name"
                android:layout_below="@id/privacy"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="7dp"
                android:text="@string/public_email"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/bioLabel"
                style="@style/EditProfileHeader"
                android:layout_below="@id/hide_email"
                android:text="@string/hint_bio"/>

            <ImageView
                android:id="@+id/bio_icon"
                style="@style/EditProfileIcon"
                android:layout_below="@id/bioLabel"
                android:tint="@color/primary_dark_50"
                app:srcCompat="@drawable/vic_bio_black_24dp"
                tools:ignore="ContentDescription"/>

            <EditText
                android:id="@+id/bio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/name"
                android:layout_alignStart="@id/name"
                android:layout_below="@id/bioLabel"
                android:textSize="@dimen/text_small"
                android:gravity="top|start"
                android:hint="@string/hint_bio"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:maxLines="6"
                android:minLines="2"
                android:scrollbars="vertical"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
