<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent" android:layout_height="match_parent"
             android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_large"
        android:background="@color/white"
        android:elevation="@dimen/padding_small"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_large"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_large">

        <RelativeLayout
            android:id="@+id/auth_fail_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <TextView
                android:id="@+id/fail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/no_ticket"/>
            <Button
                android:id="@+id/event_auth"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fail_text"
                android:layout_centerHorizontal="true"
                android:text="@string/eb_sign_in"
                android:textColor="@color/primary_dark"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/progress_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress"
                android:layout_centerHorizontal="true"
                android:text="@string/finding_ticket"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/error_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/network_msg"/>

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View android:layout_width="match_parent"
              android:layout_height="@dimen/padding_small"
              android:background="@drawable/z_depth_1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_medium"
            android:elevation="@dimen/padding_tiny">
            <Button
                android:id="@+id/retryButton"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding_small"
                android:text="@string/retry"
                android:textColor="@color/sign_in_text_light"/>
            <Button
                android:id="@+id/shareButton"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/getTicketButton"
                android:padding="@dimen/padding_small"
                android:text="@string/share"
                android:textColor="@color/sign_in_text_light"/>
            <Button
                android:id="@+id/getTicketButton"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding_small"
                android:text="@string/get_ticket"
                android:textColor="@color/primary_dark"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>

