<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent" android:layout_height="match_parent"
             android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_large"
        android:background="@color/white"
        android:elevation="@dimen/padding_small"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_large"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium"
        android:paddingTop="@dimen/padding_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:text="@string/vote_welcome_title"
            android:textColor="@color/sign_in_text_dark"
            android:textSize="@dimen/text_largeish"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_welcome_body"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View android:layout_width="match_parent"
              android:layout_height="@dimen/padding_small"
              android:background="@drawable/z_depth_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_medium"
            android:elevation="@dimen/padding_tiny"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">
            <Button
                android:id="@+id/continueButton"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/proceed"
                android:textColor="@color/primary_dark"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>

